MULE-7367: Created profiles for ci stages Modules are always included in build, but execution may be skipped via properties Upgraded assembly verifier version to 1.4 to leverage skip property